[package]
name = "chunkdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-stream = "0.2.1"
async-stream = "0.3.5"
async-trait = "0.1.71"
bytes = "1.4.0"
futures = "0.3.28"
serde =  { version = "1.0.166", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
