[package]
name = "chunkdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.71"
futures = "0.3.28"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["json", "multipart"]}
rmp-serde = "1.1.1"
rust-crypto = "0.2.36"
serde =  { version = "1.0.166", features = ["derive"] }
serde_yaml = "0.9.22"
tokio = { version = "1", features = ["full"] }
